Fix flex on mobile

--- a/Drum-Kit/style.css
+++ b/Drum-Kit/style.css
@@ -73,6 +73,7 @@ kbd {
 @media (max-width: 968px) {
 
   .keys {
+    display: flex;
     flex-flow: row wrap;
   }
 
